--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ GitConfig12$ git config --global user.name "Your Username"$ git config --global.
         總訪客量：<span id="busuanzi_value_site_uv"></span>
     </span>
     <span id="busuanzi_container_site_pv" style='display:none'>
-        總訪問量：<span id="busuanzi_value_site_pv"></span>
+        <span id="busuanzi_value_site_pv"></span>
     </span>
 </p>
 
@@ -222,7 +222,7 @@ GitConfig12$ git config --global user.name "Your Username"$ git config --global.
     <div class="bottom">
         <p>
             <span>Power by <a href="http://hexo.io/" target="_blank">Hexo</a> Theme <a href="https://github.com/yscoder/hexo-theme-indigo" target="_blank">indigo</a></span>
-            <span>阿賢 &copy; 2015 - 2017</span>
+            <span>阿賢 &copy; 2017</span>
         </p>
     </div>
 </footer>
